--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,20 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 
-
-$app-primary: mat.define-palette(mat.$indigo-palette, A400);
+$app-primary: mat.define-palette(mat.$blue-gray-palette, 900);
 $app-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 $app-warn: mat.define-palette(mat.$red-palette, A700);
 
-$app-theme: mat.define-light-theme((
+$app-theme: mat.define-light-theme(
+  (
     color: (
-        primary: $app-primary,
-        accent: $app-accent,
-        warn: $app-warn,
-    )
-));
+      primary: $app-primary,
+      accent: $app-accent,
+      warn: $app-warn,
+    ),
+  )
+);
 
 @include mat.all-component-themes($app-theme);
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
