--- a/src/app/users/users/users.component.scss
+++ b/src/app/users/users/users.component.scss
@@ -1,3 +1,10 @@
 table {
   width: 100%;
 }
+.loader{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2%;
+  background-color: rgba(0,0,0,0.25);
+}
