--- a/src/app/users/users/users.component.html
+++ b/src/app/users/users/users.component.html
@@ -1,24 +1,26 @@
-<mat-card>
-  <mat-toolbar color="primary"> Usuários Cadastrados</mat-toolbar>
-  <div *ngIf="users$ | async as users; else loading">
-    <table mat-table [dataSource]="users" class="mat-elevation-z8">
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>Id</th>
-        <td mat-cell *matCellDef="let user">{{ user.id }}</td>
-      </ng-container>
+<div class="wrapper">
+  <mat-card class="card">
+    <mat-toolbar color="primary"> Usuários Cadastrados</mat-toolbar>
+    <div *ngIf="users$ | async as users; else loading">
+      <table mat-table [dataSource]="users" class="mat-elevation-z8">
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef>Id</th>
+          <td mat-cell *matCellDef="let user">{{ user.id }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef>Email</th>
-        <td mat-cell *matCellDef="let user">{{ user.email }}</td>
-      </ng-container>
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef>Email</th>
+          <td mat-cell *matCellDef="let user">{{ user.email }}</td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-  </div>
-  <ng-template #loading>
-    <div class="loader">
-      <mat-spinner color="primary"></mat-spinner>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
     </div>
-  </ng-template>
-</mat-card>
+    <ng-template #loading>
+      <div class="loader">
+        <mat-spinner color="primary"></mat-spinner>
+      </div>
+    </ng-template>
+  </mat-card>
+</div>
