--- a/src/app/users/users/users.component.scss
+++ b/src/app/users/users/users.component.scss
@@ -1,10 +1,20 @@
+.wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+.card {
+  width: 50%;
+}
 table {
   width: 100%;
 }
-.loader{
+.loader {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 2%;
-  background-color: rgba(0,0,0,0.25);
+  background-color: rgba(0, 0, 0, 0.25);
 }
