--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @use "@angular/material" as mat;
 
-$app-primary: mat.define-palette(mat.$blue-gray-palette, 900);
-$app-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$app-primary: mat.define-palette(mat.$pink-palette, 500);
+$app-accent: mat.define-palette(mat.$blue-palette, 500);
 $app-warn: mat.define-palette(mat.$red-palette, A700);
 
 $app-theme: mat.define-light-theme(
