--- a/src/app/users/users/users.component.html
+++ b/src/app/users/users/users.component.html
@@ -3,14 +3,37 @@
     <mat-toolbar color="primary"> Usuários Cadastrados</mat-toolbar>
     <div *ngIf="users$ | async as users; else loading">
       <table mat-table [dataSource]="users" class="mat-elevation-z8">
+        <!-- Id Column -->
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef>Id</th>
           <td mat-cell *matCellDef="let user">{{ user.id }}</td>
         </ng-container>
 
+        <!-- Email Column -->
         <ng-container matColumnDef="email">
           <th mat-header-cell *matHeaderCellDef>Email</th>
           <td mat-cell *matCellDef="let user">{{ user.email }}</td>
+        </ng-container>
+
+        <!-- Actions Column -->
+        <ng-container matColumnDef="actions">
+          <mat-header-cell *matHeaderCellDef>
+            <button
+              mat-icon-button
+              color="primary"
+              aria-label="Adicionar um usuário"
+            >
+              <mat-icon (click)="onAdd()">person_add</mat-icon>
+            </button>
+          </mat-header-cell>
+          <mat-cell *matCellDef="let user">
+            <button mat-icon-button color="accent" aria-label="Editar usuário">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-icon-button color="warn" aria-label="Apagar usuário">
+              <mat-icon>delete_forever</mat-icon>
+            </button>
+          </mat-cell>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
