--- a/src/app/users/user-form/user-form.component.html
+++ b/src/app/users/user-form/user-form.component.html
@@ -1,20 +1,19 @@
 <div class="container">
   <mat-card>
-    <div class=".inputs-button">
+    <mat-card-header>
+      <mat-card-title-group>
+        <mat-card-title>Cadastro de Usuários</mat-card-title>
+        <mat-card-subtitle>Insira informações abaixo.</mat-card-subtitle>
+      </mat-card-title-group>
+    </mat-card-header>
+    <mat-card-content>
       <mat-form-field appearance="fill">
         <mat-label>Email</mat-label>
-        <input
-          type="email"
-          matInput
-          [formControl]="emailFormControl"
-          placeholder="Ex. user@example.com"
-        />
-        <mat-error
-          *ngIf="
-            emailFormControl.hasError('email') &&
-            !emailFormControl.hasError('required')
-          "
-        >
+        <input type="email" matInput [formControl]="emailFormControl" placeholder="Ex. user@example.com" />
+        <mat-error *ngIf="
+              emailFormControl.hasError('email') &&
+              !emailFormControl.hasError('required')
+            ">
           Insira um email válido.
         </mat-error>
         <mat-error *ngIf="emailFormControl.hasError('required')">
@@ -23,42 +22,41 @@
       </mat-form-field>
       <mat-form-field appearance="fill">
         <mat-label>Senha</mat-label>
-        <input
-          matInput
-          [type]="hide ? 'password' : 'text'"
-          [formControl]="passwordFormControl"
-        />
-        <button
-          mat-icon-button
-          matSuffix
-          (click)="hide = !hide"
-          [attr.aria-label]="'Mostrar Senha'"
-          [attr.aria-pressed]="hide"
-        >
+        <input matInput [type]="hide ? 'password' : 'text'" [formControl]="passwordFormControl" />
+        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Mostrar Senha'"
+          [attr.aria-pressed]="hide">
           <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
         </button>
-        <mat-error
-          *ngIf="
-            passwordFormControl.hasError('pattern') &&
-            !passwordFormControl.hasError('required')
-          "
-        >
+        <mat-error *ngIf="
+              passwordFormControl.hasError('pattern') &&
+              !passwordFormControl.hasError('required')
+            ">
           Insira uma senha válida.
         </mat-error>
         <mat-error *ngIf="passwordFormControl.hasError('required')">
           Senha é <strong>requerida</strong>
         </mat-error>
       </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions>
       <button mat-icon-button color="accent" aria-label="botão para enviar">
         <mat-icon>send</mat-icon>
       </button>
-    </div>
-    <ul>
-      <li>deve conter ao menos uma letra minúscula</li>
-      <li>deve conter ao menos uma letra maiúscula</li>
-      <li>deve conter ao menos um numero</li>
-      <li>deve conter ao menos um caractere especial</li>
-      <li>deve conter entre 6 e 15 dos caracteres mencionados</li>
-    </ul>
+      <button mat-icon-button color="warn" aria-label="botão para cance">
+        <mat-icon>cancel</mat-icon>
+      </button>
+    </mat-card-actions>
+    <!-- <mat-card-content>
+      <ul>
+        <li>deve conter ao menos uma letra minúscula</li>
+        <li>deve conter ao menos uma letra maiúscula</li>
+        <li>deve conter ao menos um numero</li>
+        <li>deve conter ao menos um caractere especial</li>
+        <li>deve conter entre 6 e 15 dos caracteres mencionados</li>
+      </ul>
+    </mat-card-content> -->
   </mat-card>
+
+
+
 </div>
