--- a/src/app/users/user-form/user-form.component.scss
+++ b/src/app/users/user-form/user-form.component.scss
@@ -1,45 +1,18 @@
-.mat-form-field{
-  margin-left: 1%;
-  width: 12rem;
-}
+
 .container{
   display: flex;
-  flex-direction: column;
-  height: 100%;
-  width: 100%;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
-
 .mat-card{
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 40%;
 }
-.inputs-button{
+.mat-card-content{
   display: flex;
   flex-direction: column;
-  height: 100%;
-}
-@media screen and (max-width: 900px) {
-  ul{
-    display: none;
-  }
-  .mat-form-field{
-    width: 12rem;
-  }
-  .inputs-button{
-  
-    width: 60%;
-    height: 100%;
-  }
-  .mat-card{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 60%;
-    height: 30%;
-  }
-  
 }
